--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -44,7 +44,7 @@
 @import "component/nav";
 @import "component/navbar";
 @import "component/jumbotron";
-@import "component/tags";
+@import "component/badge";
 @import "component/media";
 @import "component/card";
 @import "component/alert";
