--- a/scss/base/_print.scss
+++ b/scss/base/_print.scss
@@ -88,7 +88,7 @@
                 border-top-color: #000 !important;
             }
         }
-        .tag {
+        .badge {
             border: $border-width solid #000;
         }
         .table {
