--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="{{ site.baseurl }}/">CAST Figuration</a>
-            <div class="clearfix hidden-lg-up">
+            <div class="clearfix hide-lg-up">
                 <button class="navbar-toggler btn btn-toggler float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
