--- a/docs/assets/scss/_responsive-tests.scss
+++ b/docs/assets/scss/_responsive-tests.scss
@@ -67,27 +67,27 @@
 }
 
 @include media-breakpoint-only(xs) {
-    .hidden-xs-only {
+    .hide-xs-only {
         display: none !important;
     }
 }
 @include media-breakpoint-only(sm) {
-    .hidden-sm-only {
+    .hide-sm-only {
         display: none !important;
     }
 }
 @include media-breakpoint-only(md) {
-    .hidden-md-only {
+    .hide-md-only {
         display: none !important;
     }
 }
 @include media-breakpoint-only(lg) {
-    .hidden-lg-only {
+    .hide-lg-only {
         display: none !important;
     }
 }
 @include media-breakpoint-only(xl) {
-    .hidden-xl-only {
+    .hide-xl-only {
         display: none !important;
     }
 }
