--- a/scss/component/_breadcrumb.scss
+++ b/scss/component/_breadcrumb.scss
@@ -3,7 +3,7 @@
     margin-bottom: $spacer-y;
     list-style: none;
     background-color: $breadcrumb-bg;
-    @include border-radius($border-radius);
+    @include border-radius($breadcrumb-border-radius);
     @include clearfix;
 }
 
