--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -115,8 +115,10 @@
 
 // Sizing
 // Remix the button sizing classes into new ones for easier manipulation
-@each $size, $dims in $component-sizes {
-    .btn-group-#{$size} > .btn { @extend .btn-#{$size}; }
+@if $enable-sizing {
+    @each $size, $dims in $component-sizes {
+        .btn-group-#{$size} > .btn { @extend .btn-#{$size}; }
+    }
 }
 
 // Split button dropdowns
@@ -124,12 +126,14 @@
     padding-right: $btn-padding-x * .75;
     padding-left: $btn-padding-x * .75;
 }
-@each $size, $dims in $component-sizes {
-    $padding-x:     map-get($dims, "padding-x");
+@if $enable-sizing {
+    @each $size, $dims in $component-sizes {
+        $sz-padding-x: map-get($dims, "padding-x");
 
-    .btn-#{$size} > .dropdown-toggle-split {
-        padding-right: $padding-x * .75;
-        padding-left: $padding-x * .75;
+        .btn-#{$size} > .dropdown-toggle-split {
+            padding-right: $sz-padding-x * .75;
+            padding-left: $sz-padding-x * .75;
+        }
     }
 }
 
