--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -94,11 +94,13 @@
 
 // Sizing options
 // Remix the default form control sizing classes into new ones for easier manipulation.
-@each $size, $dims in $component-sizes {
-    .input-group-#{$size} > .form-control,
-    .input-group-#{$size} > .input-group-addon,
-    .input-group-#{$size} > .input-group-btn > .btn {
-        @extend .form-control-#{$size};
+@if $enable-sizing {
+    @each $size, $dims in $component-sizes {
+        .input-group-#{$size} > .form-control,
+        .input-group-#{$size} > .input-group-addon,
+        .input-group-#{$size} > .input-group-btn > .btn {
+            @extend .form-control-#{$size};
+        }
     }
 }
 
@@ -116,16 +118,18 @@
     @include border-radius($border-radius);
 
     // Sizing
-    @each $size, $dims in $component-sizes {
-        $font-size:     map-get($dims, "font-size");
-        $padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $font-size / 2);
-        $padding-x:     map-get($dims, "padding-x");
-        $border-radius: map-get($dims, "border-radius");
+    @if $enable-sizing {
+        @each $size, $dims in $component-sizes {
+            $sz-font-size:     map-get($dims, "font-size");
+            $sz-padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
+            $sz-padding-x:     map-get($dims, "padding-x");
+            $sz-border-radius: map-get($dims, "border-radius");
 
-        &.form-control-#{$size} {
-            padding: $padding-y $padding-x;
-            font-size: $font-size;
-            @include border-radius($border-radius);
+            &.form-control-#{$size} {
+                padding: $sz-padding-y $sz-padding-x;
+                font-size: $sz-font-size;
+                @include border-radius($sz-border-radius);
+            }
         }
     }
 
