--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -115,14 +115,16 @@ fieldset[disabled] a.btn {
 }
 
 // Button sizes
-@each $size, $dims in $component-sizes {
-    $font-size:     map-get($dims, "font-size");
-    $padding-y:     map-get($dims, "padding-y");
-    $padding-x:     map-get($dims, "padding-x");
-    $border-radius: map-get($dims, "border-radius");
+@if $enable-sizing {
+    @each $size, $dims in $component-sizes {
+        $sz-font-size:     map-get($dims, "font-size");
+        $sz-padding-y:     map-get($dims, "padding-y");
+        $sz-padding-x:     map-get($dims, "padding-x");
+        $sz-border-radius: map-get($dims, "border-radius");
 
-    .btn-#{$size} {
-        @include button-size($padding-y, $padding-x, $font-size, $border-radius);
+        .btn-#{$size} {
+            @include button-size($sz-padding-y, $sz-padding-x, $sz-font-size, $sz-border-radius);
+        }
     }
 }
 
