--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -78,7 +78,7 @@
 // Modal header
 // Top section of the modal w/ title and dismiss
 .modal-header {
-    padding: $modal-title-padding-y $modal-title-padding-x;
+    padding: $modal-header-padding-y $modal-header-padding-x;
     border-bottom: $modal-header-border-width solid $modal-header-border-color;
     @include clearfix;
 }
