--- a/docs/_includes/nav-sidebar.html
+++ b/docs/_includes/nav-sidebar.html
@@ -18,7 +18,7 @@
           {% endif %}
 
           <li class="nav-item">
-            <a href="{{ site.baseurl }}/{{ group.title | downcase | replace: ' ', '-' }}/{{ doc.title | downcase | replace: ' ', '-' | replace:'-&-','-' }}" class="nav-link {{ active }}">
+            <a href="{{ site.baseurl }}/{{ group.title | downcase | replace: ' ', '-' }}/{{ doc.title | downcase | replace: ' ', '-' | replace:'-&-','-' }}{% if doc.title %}/{% endif %}" class="nav-link {{ active }}">
               {{ doc.title }}
             </a>
           </li>
