header color tweak

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -23,7 +23,7 @@
                 <h1 class="cf-title" id="content">
                     {{ page.title }}
                     {% if page.subtitle %}
-                        <small>{{ page.subtitle }}</small>
+                        <small class="text-muted">{{ page.subtitle }}</small>
                     {% endif %}
                 </h1>
 
