--- a/scss/base/_print.scss
+++ b/scss/base/_print.scss
@@ -18,10 +18,9 @@
         div::first-line,
         blockquote::first-line,
         li::first-line {
-            // Figuration change - Remove overkill `color` and `background` overrides
-            //color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
+            color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
             text-shadow: none !important;
-            //background: transparent !important;
+            background: transparent !important;
             box-shadow: none !important;
         }
 
@@ -30,16 +29,14 @@
             text-decoration: underline;
         }
 
-        // Figuration change - don't show url after links
-        //a[href]::after {
-        //    content: " (" attr(href) ")";
-        //}
+        a[href]::after {
+            content: " (" attr(href) ")";
+        }
 
-        // Figuration change - Don't show links that are fragments or `javascript:`
-        //a[href^="#"]::after,
-        //a[href^="javascript:"]::after {
-        //    content: "";
-        //}
+        a[href^="#"]::after,
+        a[href^="javascript:"]::after {
+            content: "";
+        }
 
         abbr[title]::after {
             content: " (" attr(title) ")";
