More pagination tweaks

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -610,6 +610,7 @@ $breadcrumb-divider:            "/" !default;
 
 // Pagination
 // =====
+$pagination-line-height:        $btn-line-height !default;
 $pagination-padding-x:          $btn-padding-x !default;
 $pagination-padding-y:          $btn-padding-y !default;
 
