--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -51,6 +51,7 @@
     float: left; // Collapse white-space
     padding: $pagination-padding-y $pagination-padding-x;
     margin-left: -1px;
+    line-height: $pagination-line-height;
     color: $pagination-color;
     text-decoration: none;
     background-color: $pagination-bg;
@@ -58,6 +59,7 @@
 
     @include hover-focus {
         color: $pagination-hover-color;
+        text-decoration: none;
         background-color: $pagination-hover-bg;
         border-color: $pagination-hover-border;
     }
