Add ability to remove gutter from rows

--- a/scss/core/_tables.scss
+++ b/scss/core/_tables.scss
@@ -101,7 +101,7 @@
 // Responsive tables
 //
 // Wrap tables in `.table-responsive` to enable horizontal scrolling.
-// Tables will scroll when they will no longer width width-wise in
+// Tables will scroll when they will no longer fit width-wise in
 // their container.
 .table-responsive {
     display: block;
