--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -30,6 +30,19 @@
         @include make-row();
     }
 
+    // Remove the negative margin from default .row, then the horizontal padding
+    // from all immediate children columns (to prevent runaway style inheritance).
+    .no-gutters {
+        margin-right: 0;
+        margin-left: 0;
+
+        > [class*="col-"],
+        > .col {
+            padding-right: 0;
+            padding-left: 0;
+        }
+    }
+
     @if $enable-flex-opt {
         .row-flex {
             display: flex;
