--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -4,7 +4,7 @@
 @import "utilities/flex";
 @import "utilities/float";
 @import "utilities/gridline";
-@import "utilities/radius";
+@import "utilities/border";
 @import "utilities/screen-reader";
 @import "utilities/spacing";
 @import "utilities/text";
