--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -1,4 +1,4 @@
-﻿// Perfect circle
+// Perfect circle
 .radius-circle {
     border-radius: 50%;
 }
@@ -20,3 +20,13 @@
 // Radius removal
 @include radius-sides(0, 0);
 @include radius-corners(0, 0);
+
+
+// Border removal
+// scss-lint:disable ImportantRule
+.border-0 { border: 0 !important; }
+.border-t-0 { border-top: 0 !important; }
+.border-r-0 { border-right: 0 !important; }
+.border-b-0 { border-bottom: 0 !important; }
+.border-l-0 { border-left: 0 !important; }
+// scss-lint:enable ImportantRule
