--- a/scss/component/_progress.scss
+++ b/scss/component/_progress.scss
@@ -4,6 +4,8 @@
     width: 100%;
     height: $progress-height;
     margin-bottom: $spacer-y;
+    // Force rounded corners by use of cropping
+    overflow: hidden;
     // Set overall background
     background-color: $progress-bg;
     // Remove Firefox and Opera border
@@ -32,30 +34,19 @@
 }
 .progress[value]::-moz-progress-bar {
     background-color: $progress-bar-bg;
-    @include border-left-radius($progress-border-radius);
 }
 .progress[value]::-webkit-progress-value {
     background-color: $progress-bar-bg;
-    @include border-left-radius($progress-border-radius);
-}
-// Tweaks for full progress bar
-.progress[value="100"]::-moz-progress-bar {
-    @include border-right-radius($progress-border-radius);
-}
-.progress[value="100"]::-webkit-progress-value {
-    @include border-right-radius($progress-border-radius);
 }
 
 // Unfilled portion of the bar
 .progress[value]::-webkit-progress-bar {
     background-color: $progress-bg;
-    @include border-radius($progress-border-radius);
     @include box-shadow($progress-box-shadow);
 }
 base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make these styles Firefox-only
 .progress[value] {
     background-color: $progress-bg;
-    @include border-radius($progress-border-radius);
     @include box-shadow($progress-box-shadow);
 }
 
@@ -66,10 +57,6 @@ base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make thes
     text-indent: -999rem; // Simulate hiding of value as in native `<progress>`
     vertical-align: top;
     background-color: $progress-bar-bg;
-    @include border-left-radius($progress-border-radius);
-}
-.progress[width="100%"] {
-    @include border-right-radius($progress-border-radius);
 }
 
 // Striped
