--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -1,14 +1,12 @@
 // scss-lint:disable ImportantRule
 
 // Width
-.w-100 {
-    width: 100% !important;
-}
+.w-100 { width: 100% !important; }
+.mw-100 { max-width: 100% !important; }
 
 // Height
-.h-100 {
-    height: 100% !important;
-}
+.h-100 { height: 100% !important; }
+.mh-100 { max-height: 100% !important; }
 
 // Margin and Padding
 .mx-auto {
