--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -222,39 +222,6 @@
     }
 }
 
-
-// Navbar toggleable
-// Custom override for collapse widget in navbar
-
-// scss-lint:disable ImportantRule
-.navbar-toggleable {
-    @each $breakpoint in map-keys($grid-breakpoints) {
-        $nextbp: breakpoint-next($breakpoint);
-
-        @if $nextbp != null {
-            &-#{$breakpoint} {
-                @include clearfix;
-                @include media-breakpoint-down(#{$breakpoint}) {
-                    .navbar-nav .nav-item {
-                        float: none;
-                        margin-left: 0;
-                    }
-                }
-                @include media-breakpoint-up(#{$nextbp}) {
-                    display: block !important;
-                }
-            }
-            @include media-breakpoint-down(#{$breakpoint}) {
-                &-#{$breakpoint} {
-                    clear: both;
-                }
-            }
-        }
-    }
-}
-// scss-lint:enable ImportantRule
-
-
 // Alternate navbar layout - either table or flexbox
 // Uses `.navbar-group` to allow for opt-in to new layout, while keeping old style.
 .navbar-group {
@@ -337,5 +304,52 @@
     .navbar-group-flex .navbar-item-min,
     .navbar-group-flex .navbar-item-max {
         flex: 1;
+    }
+}
+
+// Navbar toggleable
+// Custom override for collapse widget in navbar
+
+.navbar-toggleable {
+    @each $breakpoint in map-keys($grid-breakpoints) {
+        $nextbp: breakpoint-next($breakpoint);
+        $bprule: breakpoint-designator($breakpoint);
+
+        @if $nextbp != null {
+            &#{$bprule} {
+                @include clearfix;
+
+                @include media-breakpoint-down(#{$breakpoint}) {
+                    .navbar-brand {
+                        display: block;
+                        float: none;
+                        margin-right: 0;
+                    }
+
+                    .navbar-nav {
+                        .dropdown-menu {
+                            position: static;
+                            float: none;
+                        }
+                        .nav-item {
+                            float: none;
+                            margin-left: 0;
+                        }
+                    }
+                }
+
+                // scss-lint:disable ImportantRule
+                @include media-breakpoint-up(#{$nextbp}) {
+                    display: block !important;
+                }
+                // scss-lint:enable ImportantRule
+            }
+
+            @include media-breakpoint-down(#{$breakpoint}) {
+                &#{$bprule} {
+                    clear: both;
+                }
+            }
+        }
     }
 }
