--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -50,6 +50,7 @@ $enable-grid-classes:   true !default;      // true
 $enable-print-styles:   true !default;      // true
 $enable-palette:        true !default;      // true
 $enable-sizing:         true !default;      // true
+$enable-bp-smallest:    false !default;     // false
 $enable-flex-full:      false !default;     // false -- all-in flex mode
 $enable-flex-opt:       true !default;      // true -- opt-in via class mode
 
