tweak alert close button

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -760,7 +760,9 @@ $badge-outline-link-hover-color:  $white !default;
 
 // Alerts
 // =====
-$alert-padding:             1rem !default;
+$alert-padding-x:           1rem !default;
+$alert-padding-y:           1rem !default;
+$alert-margin-bottom:       $spacer-y !default;
 $alert-border-radius:       $border-radius !default;
 $alert-link-font-weight:    $font-weight-bold !default;
 $alert-border-width:        $border-width !default;
