--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -1,16 +1,17 @@
 // Base styles
 .alert {
-    padding: $alert-padding;
-    padding-right: ($alert-padding + 1rem);
-    margin-bottom: $spacer-y;
+    padding: $alert-padding-y $alert-padding-x;
+    padding-right: ($alert-padding-x * 2);
+    margin-bottom: $alert-margin-bottom;
     border: $alert-border-width solid transparent;
     @include border-radius($alert-border-radius);
 
     // Adjust close link position and color
     .close {
         position: relative;
-        top: -.1rem;
-        right: -1.1rem;
+        top: -$alert-padding-y;
+        right: (-$alert-padding-x * 2);
+        padding: $alert-padding-y $alert-padding-x;
         color: inherit;
     }
 }
