--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -98,6 +98,7 @@
 
 .popover-title {
     padding: $popover-title-padding-y $popover-title-padding-x;
+    padding-right: ($popover-title-padding-x * 2);
     margin: 0; // reset heading margin
     font-size: $font-size-base;
     background-color: $popover-title-bg;
@@ -140,7 +141,8 @@
 // Control buttons
 .popover .close,
 .popover .drag {
-    padding: 0 .15em;
+    padding: ($popover-title-padding-y / 2) ($popover-title-padding-x / 2);
+    margin-top: -($popover-title-padding-y / 2);
 }
 
 // Draggable variant
