--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -112,7 +112,7 @@ p {
     margin-bottom: 1rem;
 }
 
-// Abbreviations and acronyms
+// Abbreviations
 abbr[title],
 // Add data-* attribute to help out our tooltip plugin, per https://github.com/twbs/bootstrap/issues/5257
 abbr[data-original-title] {
