--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -783,6 +783,7 @@ $card-border-width:        $border-width !default;
 $card-border-radius:       $border-radius !default;
 $card-border-radius-inner: calc(#{$border-radius} - #{$card-border-width}) !default;
 $card-border-color:        $uibase-300 !default;
+$card-cap-color:           $uibase-900 !default;
 $card-cap-bg:              $uibase-50 !default;
 $card-bg:                  $white !default;
 
