--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,6 +23,9 @@
   <link href="{{ site.baseurl }}/dist/css/figuration.css" rel="stylesheet">
 {% endif %}
 
+<!-- Algolia DocSearch CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+
 <!-- Docs CSS -->
 {% if site.github %}
   <link href="{{ site.baseurl }}/assets/css/docs.min.css" rel="stylesheet">
@@ -30,6 +33,7 @@
   <link href="{{ site.baseurl }}/assets/css/docs.css" rel="stylesheet">
 {% endif %}
 
+<!-- jQuery -->
 <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
