only load search resources for hosted version

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,8 +23,10 @@
   <link href="{{ site.baseurl }}/dist/css/figuration.css" rel="stylesheet">
 {% endif %}
 
+{% if site.github %}
 <!-- Algolia DocSearch CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+{% endif %}
 
 <!-- Docs CSS -->
 {% if site.github %}
