--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -31,6 +31,7 @@
     </div>
 </footer>
 
+{% if site.github %}
 <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
 <script>
 docsearch({
@@ -39,3 +40,4 @@ docsearch({
     inputSelector: '#docsearch'
 });
 </script>
+{% endif %}
