Link to changelog from docs home page

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="cf-footer">
     <div class="container">
-        Currently version: {{ site.current_version }}
+        Current version: {{ site.current_version }}
         <ul class="footer-links">
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
