--- a/components/list-group/index.html
+++ b/components/list-group/index.html
@@ -22,12 +22,18 @@
   <link href="/dist/css/figuration.min.css" rel="stylesheet">
 
 
+
+<!-- Algolia DocSearch CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+
+
 <!-- Docs CSS -->
 
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -61,11 +67,18 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-lg-up">
-                <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
+            <div class="hide-lg-up float-right">
+                <button class="navbar-toggler btn btn-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
+            
+            <div class="hide-xs-down float-right mt-0_25 mr-1 mr-lg-0">
+                <form class="form-inline docsearch-wrapper">
+                    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" />
+                </form>
+            </div>
+            
             <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
@@ -81,7 +94,7 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
+                        <a href="/utilities/borders/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
                         <a href="/widgets/overview/" class="nav-link">Widgets</a>
@@ -89,9 +102,7 @@
                     <li class="nav-item ">
                         <a href="/about/overview/" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item pull-lg-right">
-                        <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
@@ -101,7 +112,7 @@
     <div class="jumbotron jumbotron-full jumbotron-docs">
         <div class="container">
             
-    <h1>Components</h1>
+    <div class="h1">Components</div>
     <p class="lead">
         Reusable components built to provide alerts, button groups, cards, input groups, media objects, navigation, and much more.
     </p>
@@ -112,7 +123,7 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-3 cf-sidebar">
+            <div class="col-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
 
@@ -135,180 +146,164 @@
   
 
   
-    
-      <div class="h4">Components</div>
-      <ul class="nav">
+    <div class="h4">Components</div>
+    <ul class="nav">
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/alerts" class="nav-link ">
-              Alerts
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/breadcrumb" class="nav-link ">
-              Breadcrumb
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/button-group" class="nav-link ">
-              Button Group
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/alerts/" class="nav-link ">
+            Alerts
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/cards" class="nav-link ">
-              Cards
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/grid-lines" class="nav-link ">
-              Grid Lines
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/input-group" class="nav-link ">
-              Input Group
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/badges/" class="nav-link ">
+            Badges
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/jumbotron" class="nav-link ">
-              Jumbotron
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/list-group" class="nav-link active">
-              List Group
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/media-object" class="nav-link ">
-              Media Object
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/breadcrumb/" class="nav-link ">
+            Breadcrumb
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/navbar" class="nav-link ">
-              Navbar
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/navs" class="nav-link ">
-              Navs
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/pagination" class="nav-link ">
-              Pagination
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/button-group/" class="nav-link ">
+            Button Group
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/progress" class="nav-link ">
-              Progress
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/tags" class="nav-link ">
-              Tags
-            </a>
-          </li>
         
-      </ul>
-    
+
+        <li class="nav-item">
+          <a href="/components/cards/" class="nav-link ">
+            Cards
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/grid-lines/" class="nav-link ">
+            Grid Lines
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/input-group/" class="nav-link ">
+            Input Group
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/jumbotron/" class="nav-link ">
+            Jumbotron
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/list-group/" class="nav-link active">
+            List Group
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/media-object/" class="nav-link ">
+            Media Object
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/navbar/" class="nav-link ">
+            Navbar
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/navs/" class="nav-link ">
+            Navs
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/pagination/" class="nav-link ">
+            Pagination
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/progress/" class="nav-link ">
+            Progress
+          </a>
+        </li>
+      
+    </ul>
   
 
   
@@ -329,7 +324,7 @@
 </nav>
 
             </div>
-            <div class="col-xs-12 col-md-9 cf-content">
+            <div class="col-12 col-md-9 cf-content">
                 <h1 class="cf-title" id="content">
                     List Group
                     
@@ -343,7 +338,7 @@
 
 <ul id="markdown-toc">
   <li><a href="#basic-example" id="markdown-toc-basic-example">Basic Example</a></li>
-  <li><a href="#tags" id="markdown-toc-tags">Tags</a></li>
+  <li><a href="#badges" id="markdown-toc-badges">Badges</a></li>
   <li><a href="#disabled-items" id="markdown-toc-disabled-items">Disabled Items</a></li>
   <li><a href="#anchors-and-buttons" id="markdown-toc-anchors-and-buttons">Anchors and Buttons</a></li>
   <li><a href="#contextual-classes" id="markdown-toc-contextual-classes">Contextual Classes</a></li>
@@ -370,71 +365,71 @@
   <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item"</span><span class="nt">&gt;</span>Vestibulum at eros<span class="nt">&lt;/li&gt;</span>
 <span class="nt">&lt;/ul&gt;</span></code></pre></div>
 
-<h2 id="tags">Tags</h2>
+<h2 id="badges">Badges</h2>
 
-<p>Add tags to any list group item to show unread counts, activity, etc.</p>
+<p>Add badges to any list group item to show unread counts, activity, etc.</p>
 
 <div class="cf-example" data-example-id="">
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill pull-xs-right">14</span>
+    <span class="badge badge-pill float-right">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill pull-xs-right">2</span>
+    <span class="badge badge-pill float-right">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill pull-xs-right">1</span>
+    <span class="badge badge-pill float-right">1</span>
     Morbi leo risus
   </li>
 </ul>
 </div>
 <div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;ul</span> <span class="na">class=</span><span class="s">"list-group"</span><span class="nt">&gt;</span>
   <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-default tag-pill pull-xs-right"</span><span class="nt">&gt;</span>14<span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"badge badge-pill float-right"</span><span class="nt">&gt;</span>14<span class="nt">&lt;/span&gt;</span>
     Cras justo odio
   <span class="nt">&lt;/li&gt;</span>
   <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-default tag-pill pull-xs-right"</span><span class="nt">&gt;</span>2<span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"badge badge-pill float-right"</span><span class="nt">&gt;</span>2<span class="nt">&lt;/span&gt;</span>
     Dapibus ac facilisis in
   <span class="nt">&lt;/li&gt;</span>
   <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-default tag-pill pull-xs-right"</span><span class="nt">&gt;</span>1<span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"badge badge-pill float-right"</span><span class="nt">&gt;</span>1<span class="nt">&lt;/span&gt;</span>
     Morbi leo risus
   <span class="nt">&lt;/li&gt;</span>
 <span class="nt">&lt;/ul&gt;</span></code></pre></div>
 
-<p>If using flexbox mode, to replicate the right-aligned tags, you will need to rework the contents of your list group items. See the following example. Note the re-ordering of sub-items, the use of the <a href="/utilities/flexbox/#horizontal-alignment"><code class="highlighter-rouge">flex-xs-between</code> utility class</a> for sub-item layout, and the removal of the pull utility on tags.</p>
+<p>If using flexbox mode, to replicate the right-aligned badges, you will need to rework the contents of your list group items. See the following example. Note the re-ordering of sub-items, the use of the <a href="/utilities/flexbox/#horizontal-alignment"><code class="highlighter-rouge">flex-between</code> utility class</a> for sub-item layout, and the removal of the <a href="/utilities/responsive-floats/"><code class="highlighter-rouge">.float-right</code> utility</a> on badges.</p>
 
 <div class="cf-example" data-example-id="">
 <ul class="list-group list-group-flex">
-  <li class="list-group-item flex-xs-between">
+  <li class="list-group-item flex-between">
     Cras justo odio
-    <span class="tag tag-default tag-pill">14</span>
+    <span class="badge badge-pill">14</span>
   </li>
-  <li class="list-group-item flex-xs-between">
+  <li class="list-group-item flex-between">
     Dapibus ac facilisis in
-    <span class="tag tag-default tag-pill">2</span>
+    <span class="badge badge-pill">2</span>
   </li>
-  <li class="list-group-item flex-xs-between">
+  <li class="list-group-item flex-between">
     Morbi leo risus
-    <span class="tag tag-default tag-pill">1</span>
+    <span class="badge badge-pill">1</span>
   </li>
 </ul>
 </div>
 <div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;ul</span> <span class="na">class=</span><span class="s">"list-group list-group-flex"</span><span class="nt">&gt;</span>
-  <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item flex-xs-between"</span><span class="nt">&gt;</span>
+  <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item flex-between"</span><span class="nt">&gt;</span>
     Cras justo odio
-    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-default tag-pill"</span><span class="nt">&gt;</span>14<span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"badge badge-pill"</span><span class="nt">&gt;</span>14<span class="nt">&lt;/span&gt;</span>
   <span class="nt">&lt;/li&gt;</span>
-  <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item flex-xs-between"</span><span class="nt">&gt;</span>
+  <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item flex-between"</span><span class="nt">&gt;</span>
     Dapibus ac facilisis in
-    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-default tag-pill"</span><span class="nt">&gt;</span>2<span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"badge badge-pill"</span><span class="nt">&gt;</span>2<span class="nt">&lt;/span&gt;</span>
   <span class="nt">&lt;/li&gt;</span>
-  <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item flex-xs-between"</span><span class="nt">&gt;</span>
+  <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"list-group-item flex-between"</span><span class="nt">&gt;</span>
     Morbi leo risus
-    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"tag tag-default tag-pill"</span><span class="nt">&gt;</span>1<span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"badge badge-pill"</span><span class="nt">&gt;</span>1<span class="nt">&lt;/span&gt;</span>
   <span class="nt">&lt;/li&gt;</span>
 <span class="nt">&lt;/ul&gt;</span></code></pre></div>
 
@@ -581,7 +576,7 @@
 
     <footer class="cf-footer">
     <div class="container">
-        Currently version: 1.3.1
+        Current version: 2.0.0
         <ul class="footer-links">
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
@@ -611,6 +606,17 @@
 
     </div>
 </footer>
+
+
+<script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+<script>
+docsearch({
+    apiKey: '3b9b6e000775400f4833a14c4daa6049',
+    indexName: 'figuration',
+    inputSelector: '#docsearch'
+});
+</script>
+
 
 </body>
 </html>
