--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -22,12 +22,18 @@
   <link href="/dist/css/figuration.min.css" rel="stylesheet">
 
 
+
+<!-- Algolia DocSearch CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+
+
 <!-- Docs CSS -->
 
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -61,11 +67,18 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-lg-up">
-                <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
+            <div class="hide-lg-up float-right">
+                <button class="navbar-toggler btn btn-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
+            
+            <div class="hide-xs-down float-right mt-0_25 mr-1 mr-lg-0">
+                <form class="form-inline docsearch-wrapper">
+                    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" />
+                </form>
+            </div>
+            
             <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
@@ -81,7 +94,7 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
+                        <a href="/utilities/borders/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
                         <a href="/widgets/overview/" class="nav-link">Widgets</a>
@@ -89,9 +102,7 @@
                     <li class="nav-item ">
                         <a href="/about/overview/" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item pull-lg-right">
-                        <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
@@ -101,7 +112,7 @@
     <div class="jumbotron jumbotron-full jumbotron-docs">
         <div class="container">
             
-    <h1>Components</h1>
+    <div class="h1">Components</div>
     <p class="lead">
         Reusable components built to provide alerts, button groups, cards, input groups, media objects, navigation, and much more.
     </p>
@@ -112,7 +123,7 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-3 cf-sidebar">
+            <div class="col-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
 
@@ -135,180 +146,164 @@
   
 
   
-    
-      <div class="h4">Components</div>
-      <ul class="nav">
+    <div class="h4">Components</div>
+    <ul class="nav">
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/alerts" class="nav-link ">
-              Alerts
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/breadcrumb" class="nav-link ">
-              Breadcrumb
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/button-group" class="nav-link ">
-              Button Group
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/alerts/" class="nav-link ">
+            Alerts
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/cards" class="nav-link ">
-              Cards
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/grid-lines" class="nav-link ">
-              Grid Lines
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/input-group" class="nav-link ">
-              Input Group
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/badges/" class="nav-link ">
+            Badges
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/jumbotron" class="nav-link ">
-              Jumbotron
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/list-group" class="nav-link ">
-              List Group
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/media-object" class="nav-link ">
-              Media Object
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/breadcrumb/" class="nav-link ">
+            Breadcrumb
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/navbar" class="nav-link ">
-              Navbar
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/navs" class="nav-link ">
-              Navs
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/pagination" class="nav-link active">
-              Pagination
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/button-group/" class="nav-link ">
+            Button Group
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/progress" class="nav-link ">
-              Progress
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/tags" class="nav-link ">
-              Tags
-            </a>
-          </li>
         
-      </ul>
-    
+
+        <li class="nav-item">
+          <a href="/components/cards/" class="nav-link ">
+            Cards
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/grid-lines/" class="nav-link ">
+            Grid Lines
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/input-group/" class="nav-link ">
+            Input Group
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/jumbotron/" class="nav-link ">
+            Jumbotron
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/list-group/" class="nav-link ">
+            List Group
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/media-object/" class="nav-link ">
+            Media Object
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/navbar/" class="nav-link ">
+            Navbar
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/navs/" class="nav-link ">
+            Navs
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/pagination/" class="nav-link active">
+            Pagination
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/progress/" class="nav-link ">
+            Progress
+          </a>
+        </li>
+      
+    </ul>
   
 
   
@@ -329,7 +324,7 @@
 </nav>
 
             </div>
-            <div class="col-xs-12 col-md-9 cf-content">
+            <div class="col-12 col-md-9 cf-content">
                 <h1 class="cf-title" id="content">
                     Pagination
                     
@@ -347,7 +342,7 @@
 
 <h2 id="overview">Overview</h2>
 
-<p>Simple pagination inspired by Rdio, great for apps and search results. The large block is hard to miss, easily scalable, and provides large click areas.</p>
+<p>Simple pagination, great for apps and search results. The large block is hard to miss, easily scalable, and provides large click areas.</p>
 
 <div class="cf-example" data-example-id="">
 <nav aria-label="Page navigation">
@@ -363,7 +358,7 @@
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">4</a></li>
     <li class="page-item"><a class="page-link" href="#">5</a></li>
-    <li class="page-item">
+    <li class="page-item ml-0_5">
       <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
@@ -385,7 +380,7 @@
     <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"page-item"</span><span class="nt">&gt;&lt;a</span> <span class="na">class=</span><span class="s">"page-link"</span> <span class="na">href=</span><span class="s">"#"</span><span class="nt">&gt;</span>3<span class="nt">&lt;/a&gt;&lt;/li&gt;</span>
     <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"page-item"</span><span class="nt">&gt;&lt;a</span> <span class="na">class=</span><span class="s">"page-link"</span> <span class="na">href=</span><span class="s">"#"</span><span class="nt">&gt;</span>4<span class="nt">&lt;/a&gt;&lt;/li&gt;</span>
     <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"page-item"</span><span class="nt">&gt;&lt;a</span> <span class="na">class=</span><span class="s">"page-link"</span> <span class="na">href=</span><span class="s">"#"</span><span class="nt">&gt;</span>5<span class="nt">&lt;/a&gt;&lt;/li&gt;</span>
-    <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"page-item"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"page-item ml-0_5"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"page-link"</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">aria-label=</span><span class="s">"Next"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;span</span> <span class="na">aria-hidden=</span><span class="s">"true"</span><span class="nt">&gt;</span><span class="ni">&amp;raquo;</span><span class="nt">&lt;/span&gt;</span>
         <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"sr-only"</span><span class="nt">&gt;</span>Next<span class="nt">&lt;/span&gt;</span>
@@ -608,7 +603,7 @@
 
     <footer class="cf-footer">
     <div class="container">
-        Currently version: 1.3.1
+        Current version: 2.0.0
         <ul class="footer-links">
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
@@ -638,6 +633,17 @@
 
     </div>
 </footer>
+
+
+<script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+<script>
+docsearch({
+    apiKey: '3b9b6e000775400f4833a14c4daa6049',
+    indexName: 'figuration',
+    inputSelector: '#docsearch'
+});
+</script>
+
 
 </body>
 </html>
