--- a/components/progress/index.html
+++ b/components/progress/index.html
@@ -22,12 +22,18 @@
   <link href="/dist/css/figuration.min.css" rel="stylesheet">
 
 
+
+<!-- Algolia DocSearch CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+
+
 <!-- Docs CSS -->
 
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -61,11 +67,18 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-lg-up">
-                <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
+            <div class="hide-lg-up float-right">
+                <button class="navbar-toggler btn btn-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
+            
+            <div class="hide-xs-down float-right mt-0_25 mr-1 mr-lg-0">
+                <form class="form-inline docsearch-wrapper">
+                    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" />
+                </form>
+            </div>
+            
             <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
@@ -81,7 +94,7 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
+                        <a href="/utilities/borders/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
                         <a href="/widgets/overview/" class="nav-link">Widgets</a>
@@ -89,9 +102,7 @@
                     <li class="nav-item ">
                         <a href="/about/overview/" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item pull-lg-right">
-                        <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
@@ -101,7 +112,7 @@
     <div class="jumbotron jumbotron-full jumbotron-docs">
         <div class="container">
             
-    <h1>Components</h1>
+    <div class="h1">Components</div>
     <p class="lead">
         Reusable components built to provide alerts, button groups, cards, input groups, media objects, navigation, and much more.
     </p>
@@ -112,7 +123,7 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-3 cf-sidebar">
+            <div class="col-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
 
@@ -135,180 +146,164 @@
   
 
   
-    
-      <div class="h4">Components</div>
-      <ul class="nav">
+    <div class="h4">Components</div>
+    <ul class="nav">
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/alerts" class="nav-link ">
-              Alerts
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/breadcrumb" class="nav-link ">
-              Breadcrumb
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/button-group" class="nav-link ">
-              Button Group
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/alerts/" class="nav-link ">
+            Alerts
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/cards" class="nav-link ">
-              Cards
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/grid-lines" class="nav-link ">
-              Grid Lines
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/input-group" class="nav-link ">
-              Input Group
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/badges/" class="nav-link ">
+            Badges
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/jumbotron" class="nav-link ">
-              Jumbotron
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/list-group" class="nav-link ">
-              List Group
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/media-object" class="nav-link ">
-              Media Object
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/breadcrumb/" class="nav-link ">
+            Breadcrumb
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/navbar" class="nav-link ">
-              Navbar
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/navs" class="nav-link ">
-              Navs
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/pagination" class="nav-link ">
-              Pagination
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/components/button-group/" class="nav-link ">
+            Button Group
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/progress" class="nav-link active">
-              Progress
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/components/tags" class="nav-link ">
-              Tags
-            </a>
-          </li>
         
-      </ul>
-    
+
+        <li class="nav-item">
+          <a href="/components/cards/" class="nav-link ">
+            Cards
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/grid-lines/" class="nav-link ">
+            Grid Lines
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/input-group/" class="nav-link ">
+            Input Group
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/jumbotron/" class="nav-link ">
+            Jumbotron
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/list-group/" class="nav-link ">
+            List Group
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/media-object/" class="nav-link ">
+            Media Object
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/navbar/" class="nav-link ">
+            Navbar
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/navs/" class="nav-link ">
+            Navs
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/pagination/" class="nav-link ">
+            Pagination
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/components/progress/" class="nav-link active">
+            Progress
+          </a>
+        </li>
+      
+    </ul>
   
 
   
@@ -329,7 +324,7 @@
 </nav>
 
             </div>
-            <div class="col-xs-12 col-md-9 cf-content">
+            <div class="col-12 col-md-9 cf-content">
                 <h1 class="cf-title" id="content">
                     Progress
                     
@@ -351,34 +346,34 @@
 <p>To caption a progress bar, simply add a <code class="highlighter-rouge">&lt;div&gt;</code> with your caption text, <a href="/utilities/typography/#text-alignment">align the text using a utility class</a>, and associate the caption with the <code class="highlighter-rouge">&lt;progress&gt;</code> element using the <code class="highlighter-rouge">aria-describedby</code> attribute.</p>
 
 <div class="cf-example" data-example-id="">
-<div class="text-xs-center" id="example-caption-1">Reticulating splines&hellip; 0%</div>
+<div class="text-center" id="example-caption-1">Reticulating splines&hellip; 0%</div>
 <progress class="progress" value="0" max="100" aria-describedby="example-caption-1"></progress>
 
-<div class="text-xs-center" id="example-caption-2">Reticulating splines&hellip; 25%</div>
+<div class="text-center" id="example-caption-2">Reticulating splines&hellip; 25%</div>
 <progress class="progress" value="25" max="100" aria-describedby="example-caption-2"></progress>
 
-<div class="text-xs-center" id="example-caption-3">Reticulating splines&hellip; 50%</div>
+<div class="text-center" id="example-caption-3">Reticulating splines&hellip; 50%</div>
 <progress class="progress" value="50" max="100" aria-describedby="example-caption-3"></progress>
 
-<div class="text-xs-center" id="example-caption-4">Reticulating splines&hellip; 75%</div>
+<div class="text-center" id="example-caption-4">Reticulating splines&hellip; 75%</div>
 <progress class="progress" value="75" max="100" aria-describedby="example-caption-4"></progress>
 
-<div class="text-xs-center" id="example-caption-5">Reticulating splines&hellip; 100%</div>
+<div class="text-center" id="example-caption-5">Reticulating splines&hellip; 100%</div>
 <progress class="progress" value="100" max="100" aria-describedby="example-caption-5"></progress>
 </div>
-<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-xs-center"</span> <span class="na">id=</span><span class="s">"example-caption-1"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 0%<span class="nt">&lt;/div&gt;</span>
+<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-center"</span> <span class="na">id=</span><span class="s">"example-caption-1"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 0%<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;progress</span> <span class="na">class=</span><span class="s">"progress"</span> <span class="na">value=</span><span class="s">"0"</span> <span class="na">max=</span><span class="s">"100"</span> <span class="na">aria-describedby=</span><span class="s">"example-caption-1"</span><span class="nt">&gt;&lt;/progress&gt;</span>
 
-<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-xs-center"</span> <span class="na">id=</span><span class="s">"example-caption-2"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 25%<span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-center"</span> <span class="na">id=</span><span class="s">"example-caption-2"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 25%<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;progress</span> <span class="na">class=</span><span class="s">"progress"</span> <span class="na">value=</span><span class="s">"25"</span> <span class="na">max=</span><span class="s">"100"</span> <span class="na">aria-describedby=</span><span class="s">"example-caption-2"</span><span class="nt">&gt;&lt;/progress&gt;</span>
 
-<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-xs-center"</span> <span class="na">id=</span><span class="s">"example-caption-3"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 50%<span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-center"</span> <span class="na">id=</span><span class="s">"example-caption-3"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 50%<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;progress</span> <span class="na">class=</span><span class="s">"progress"</span> <span class="na">value=</span><span class="s">"50"</span> <span class="na">max=</span><span class="s">"100"</span> <span class="na">aria-describedby=</span><span class="s">"example-caption-3"</span><span class="nt">&gt;&lt;/progress&gt;</span>
 
-<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-xs-center"</span> <span class="na">id=</span><span class="s">"example-caption-4"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 75%<span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-center"</span> <span class="na">id=</span><span class="s">"example-caption-4"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 75%<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;progress</span> <span class="na">class=</span><span class="s">"progress"</span> <span class="na">value=</span><span class="s">"75"</span> <span class="na">max=</span><span class="s">"100"</span> <span class="na">aria-describedby=</span><span class="s">"example-caption-4"</span><span class="nt">&gt;&lt;/progress&gt;</span>
 
-<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-xs-center"</span> <span class="na">id=</span><span class="s">"example-caption-5"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 100%<span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-center"</span> <span class="na">id=</span><span class="s">"example-caption-5"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 100%<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;progress</span> <span class="na">class=</span><span class="s">"progress"</span> <span class="na">value=</span><span class="s">"100"</span> <span class="na">max=</span><span class="s">"100"</span> <span class="na">aria-describedby=</span><span class="s">"example-caption-5"</span><span class="nt">&gt;&lt;/progress&gt;</span></code></pre></div>
 
 <h2 id="contextual-alternatives">Contextual Alternatives</h2>
@@ -424,7 +419,7 @@
 <p>Internet Explorer 9 doesn’t support the HTML5 <code class="highlighter-rouge">&lt;progress&gt;</code> element, but we can work around that.</p>
 
 <div class="cf-example" data-example-id="">
-<div class="text-xs-center" id="example-caption-6">Reticulating splines&hellip; 25%</div>
+<div class="text-center" id="example-caption-6">Reticulating splines&hellip; 25%</div>
 <progress class="progress" value="25" max="100" aria-describedby="example-caption-6">
   <div class="progress">
     <span class="progress-bar" style="width: 25%;"></span>
@@ -443,7 +438,7 @@
   </div>
 </progress>
 </div>
-<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-xs-center"</span> <span class="na">id=</span><span class="s">"example-caption-6"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 25%<span class="nt">&lt;/div&gt;</span>
+<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"text-center"</span> <span class="na">id=</span><span class="s">"example-caption-6"</span><span class="nt">&gt;</span>Reticulating splines<span class="ni">&amp;hellip;</span> 25%<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;progress</span> <span class="na">class=</span><span class="s">"progress"</span> <span class="na">value=</span><span class="s">"25"</span> <span class="na">max=</span><span class="s">"100"</span> <span class="na">aria-describedby=</span><span class="s">"example-caption-6"</span><span class="nt">&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"progress"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"progress-bar"</span> <span class="na">style=</span><span class="s">"width: 25%;"</span><span class="nt">&gt;&lt;/span&gt;</span>
@@ -473,7 +468,7 @@
 
     <footer class="cf-footer">
     <div class="container">
-        Currently version: 1.3.1
+        Current version: 2.0.0
         <ul class="footer-links">
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
@@ -503,6 +498,17 @@
 
     </div>
 </footer>
+
+
+<script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+<script>
+docsearch({
+    apiKey: '3b9b6e000775400f4833a14c4daa6049',
+    indexName: 'figuration',
+    inputSelector: '#docsearch'
+});
+</script>
+
 
 </body>
 </html>
