--- a/examples/grid/grid.css
+++ b/examples/grid/grid.css
@@ -11,9 +11,14 @@ h2 {
     margin-top: 1rem;
     margin-bottom: 0;
 }
-[class^="col-"] {
+[class^="col-"],
+.col {
     padding-top: .75rem;
     padding-bottom: .75rem;
     background-color: rgba(34,68,102,.15);
     border: 1px solid rgba(34,68,102,.2);
+}
+.row-flex > [class^="col-"],
+.row-flex > .col {
+    background-color: rgba(102,0,102,.15);
 }
