--- a/layout/overview/index.html
+++ b/layout/overview/index.html
@@ -22,12 +22,18 @@
   <link href="/dist/css/figuration.min.css" rel="stylesheet">
 
 
+
+<!-- Algolia DocSearch CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+
+
 <!-- Docs CSS -->
 
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -61,11 +67,18 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-lg-up">
-                <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
+            <div class="hide-lg-up float-right">
+                <button class="navbar-toggler btn btn-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
+            
+            <div class="hide-xs-down float-right mt-0_25 mr-1 mr-lg-0">
+                <form class="form-inline docsearch-wrapper">
+                    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" />
+                </form>
+            </div>
+            
             <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
@@ -81,7 +94,7 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
+                        <a href="/utilities/borders/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
                         <a href="/widgets/overview/" class="nav-link">Widgets</a>
@@ -89,9 +102,7 @@
                     <li class="nav-item ">
                         <a href="/about/overview/" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item pull-lg-right">
-                        <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
@@ -101,7 +112,7 @@
     <div class="jumbotron jumbotron-full jumbotron-docs">
         <div class="container">
             
-    <h1>Layout</h1>
+    <div class="h1">Layout</div>
     <p class="lead">
         Options for structuring your pages, including global styles, required scaffolding, grid system, and more.
     </p>
@@ -112,7 +123,7 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-3 cf-sidebar">
+            <div class="col-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
 
@@ -125,60 +136,54 @@
   
 
   
-    
-      <div class="h4">Layout</div>
-      <ul class="nav">
+    <div class="h4">Layout</div>
+    <ul class="nav">
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/overview" class="nav-link active">
-              Overview
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/grid" class="nav-link ">
-              Grid
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/responsive-utilities" class="nav-link ">
-              Responsive Utilities
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/layout/overview/" class="nav-link active">
+            Overview
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/flexbox" class="nav-link ">
-              Flexbox
-            </a>
-          </li>
         
-      </ul>
-    
+        
+
+        <li class="nav-item">
+          <a href="/layout/grid/" class="nav-link ">
+            Grid
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/layout/responsive-utilities/" class="nav-link ">
+            Responsive Utilities
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/layout/flexbox/" class="nav-link ">
+            Flexbox
+          </a>
+        </li>
+      
+    </ul>
   
 
   
@@ -209,7 +214,7 @@
 </nav>
 
             </div>
-            <div class="col-xs-12 col-md-9 cf-content">
+            <div class="col-12 col-md-9 cf-content">
                 <h1 class="cf-title" id="content">
                     Overview
                     
@@ -222,6 +227,7 @@
 <ul id="markdown-toc">
   <li><a href="#containers" id="markdown-toc-containers">Containers</a></li>
   <li><a href="#responsive-breakpoints" id="markdown-toc-responsive-breakpoints">Responsive Breakpoints</a></li>
+  <li><a href="#breakpoint-nomenclature" id="markdown-toc-breakpoint-nomenclature">Breakpoint Nomenclature</a></li>
   <li><a href="#z-index" id="markdown-toc-z-index">Z-index</a></li>
 </ul>
 
@@ -261,7 +267,7 @@
 
 <h2 id="responsive-breakpoints">Responsive Breakpoints</h2>
 
-<p>Since Figuration is developed to be mobile first, we use a handful of <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Media_queries">media queries</a> to create sensible breakpoints for our layouts and interfaces. These breakpoints are mostly based on minimum viewport widths and allow us to scale up elements as the viewport changes.</p>
+<p>Since Figuration is developed to be mobile first, we use a handful of <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries">media queries</a> to create sensible breakpoints for our layouts and interfaces. These breakpoints are mostly based on minimum viewport widths and allow us to scale up elements as the viewport changes.</p>
 
 <p>For accessibility reasons, the Sass internally maps the pixel defined breakpoints into <code class="highlighter-rouge">em</code> values.  We assume a 16px default root font size, since this is the default for most browsers.</p>
 
@@ -281,11 +287,11 @@
 
 <p>Figuration primarily uses the following media query ranges—or breakpoints—in our source Sass files for our layout, grid system, and components.</p>
 
-<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="c1">// Extra small devices (portrait phones, less than 34em)
+<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="c1">// Extra small devices (portrait phones, less than 36em/576px)
 // No media query since this is the default in Bootstrap
 </span>
-<span class="c1">// Small devices (landscape phones, 34em/544px and up)
-</span><span class="k">@media</span> <span class="p">(</span><span class="n">min-width</span><span class="o">:</span> <span class="m">34em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
+<span class="c1">// Small devices (landscape phones, 36em/576px and up)
+</span><span class="k">@media</span> <span class="p">(</span><span class="n">min-width</span><span class="o">:</span> <span class="m">36em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
 
 <span class="c1">// Medium devices (tablets, 48em/768px and up)
 </span><span class="k">@media</span> <span class="p">(</span><span class="n">min-width</span><span class="o">:</span> <span class="m">48em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
@@ -313,8 +319,8 @@
 
 <p>We occasionally use media queries that go in the other direction (the given screen size <em>or smaller</em>):</p>
 
-<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="c1">// Extra small devices (portrait phones, less than 34em/544px)
-</span><span class="k">@media</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">33</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
+<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="c1">// Extra small devices (portrait phones, less than 36em/576px)
+</span><span class="k">@media</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">35</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
 
 <span class="c1">// Small devices (landscape phones, less than 48em/768px)
 </span><span class="k">@media</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">47</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
@@ -337,11 +343,11 @@
 
 <p>We also have media between the breakpoint’s minimum and maximum widths for only the given screen size:</p>
 
-<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="c1">// Extra small devices (portrait phones, less than 544px)
-</span><span class="k">@media</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">543px</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
+<figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="c1">// Extra small devices (portrait phones, less than 36em/576px)
+</span><span class="k">@media</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">35</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
 
-<span class="c1">// Small devices (landscape phones, 34em/544px and up)
-</span><span class="k">@media</span> <span class="p">(</span><span class="n">min-width</span><span class="o">:</span> <span class="m">34em</span><span class="p">)</span> <span class="nf">and</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">47</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
+<span class="c1">// Small devices (landscape phones, 36em/576px and up)
+</span><span class="k">@media</span> <span class="p">(</span><span class="n">min-width</span><span class="o">:</span> <span class="m">36em</span><span class="p">)</span> <span class="nf">and</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">47</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
 
 <span class="c1">// Medium devices (tablets, 48em/768px and up)
 </span><span class="k">@media</span> <span class="p">(</span><span class="n">min-width</span><span class="o">:</span> <span class="m">48em</span><span class="p">)</span> <span class="nf">and</span> <span class="p">(</span><span class="n">max-width</span><span class="o">:</span> <span class="m">61</span><span class="mi">.9375em</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span>
@@ -369,6 +375,31 @@
 <p>The Sass mixin for the above example look like that shown beneath:</p>
 
 <figure class="highlight"><pre><code class="language-scss" data-lang="scss"><span class="k">@include</span> <span class="nd">media-breakpoint-between</span><span class="p">(</span><span class="n">md</span><span class="o">,</span> <span class="n">lg</span><span class="p">)</span> <span class="p">{</span> <span class="nc">...</span> <span class="p">}</span></code></pre></figure>
+
+<h2 id="breakpoint-nomenclature">Breakpoint Nomenclature</h2>
+
+<p>Since Figuration is built as a mobile first framework, by default, we have created our class naming structure to <strong>not</strong> use the smallest breakpoint designation, except for a few certain instances.  However, this is configurable for custom builds by overriding <code class="highlighter-rouge">$enable-bp-smallest</code> option referenced in the <a href="/get-started/options/#global-options">Global Options</a> settings.</p>
+
+<p>Classes that apply to all breakpoints, from <code class="highlighter-rouge">xs</code> to <code class="highlighter-rouge">xl</code>, have no breakpoint abbreviation in them. This is because those classes are applied from <code class="highlighter-rouge">min-width: 0</code> and up, and thus are not bound by a media query. The remaining breakpoints, however, do include a breakpoint abbreviation.</p>
+
+<p>Building from the base component or utility name, most classes are named using the format <code class="highlighter-rouge">.base-{direction}-{dimension}</code> for <code class="highlighter-rouge">xs</code> and <code class="highlighter-rouge">.base-{breakpoint}-{direction}-{dimension}</code> for <code class="highlighter-rouge">sm</code>, <code class="highlighter-rouge">md</code>, <code class="highlighter-rouge">lg</code>, and <code class="highlighter-rouge">xl</code>.  In the case of some utilites that have abbreviated names, such as the <a href="/utilities/spacing">spacing utilities</a>, the format is <code class="highlighter-rouge">.abbr{direction}-{breakpoint}-{dimension}</code>.</p>
+
+<p>The only special case is where there are <code class="highlighter-rouge">*-up</code> or <code class="highlighter-rouge">*-down</code> variants for certain components or classes, the breakpoint designation.  Only then is the minimum breakpoint designation used in the class name.</p>
+
+<p>A quick example using some of Figuration’s <a href="/utilities/typography">Typography utility classes</a>.</p>
+
+<div class="cf-example" data-example-id="">
+<p class="text-right">Right aligned text on all viewport sizes. (<strong>No <code>xs</code> class designation!</strong>)</p>
+<p class="text-sm-right">Right aligned text on viewports sized SM (small) or wider.</p>
+<p class="text-md-right">Right aligned text on viewports sized MD (medium) or wider.</p>
+<p class="text-lg-right">Right aligned text on viewports sized LG (large) or wider.</p>
+<p class="text-xl-right">Right aligned text on viewports sized XL (extra-large) or wider.</p>
+</div>
+<div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"text-right"</span><span class="nt">&gt;</span>Right aligned text on all viewport sizes. (<span class="nt">&lt;strong&gt;</span>No <span class="nt">&lt;code&gt;</span>xs<span class="nt">&lt;/code&gt;</span> class designation!<span class="nt">&lt;/strong&gt;</span>)<span class="nt">&lt;/p&gt;</span>
+<span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"text-sm-right"</span><span class="nt">&gt;</span>Right aligned text on viewports sized SM (small) or wider.<span class="nt">&lt;/p&gt;</span>
+<span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"text-md-right"</span><span class="nt">&gt;</span>Right aligned text on viewports sized MD (medium) or wider.<span class="nt">&lt;/p&gt;</span>
+<span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"text-lg-right"</span><span class="nt">&gt;</span>Right aligned text on viewports sized LG (large) or wider.<span class="nt">&lt;/p&gt;</span>
+<span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"text-xl-right"</span><span class="nt">&gt;</span>Right aligned text on viewports sized XL (extra-large) or wider.<span class="nt">&lt;/p&gt;</span></code></pre></div>
 
 <h2 id="z-index">Z-index</h2>
 
@@ -398,7 +429,7 @@
 
     <footer class="cf-footer">
     <div class="container">
-        Currently version: 1.3.1
+        Current version: 2.0.0
         <ul class="footer-links">
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
@@ -428,6 +459,17 @@
 
     </div>
 </footer>
+
+
+<script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+<script>
+docsearch({
+    apiKey: '3b9b6e000775400f4833a14c4daa6049',
+    indexName: 'figuration',
+    inputSelector: '#docsearch'
+});
+</script>
+
 
 </body>
 </html>
