--- a/layout/responsive-utilities/index.html
+++ b/layout/responsive-utilities/index.html
@@ -22,12 +22,18 @@
   <link href="/dist/css/figuration.min.css" rel="stylesheet">
 
 
+
+<!-- Algolia DocSearch CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+
+
 <!-- Docs CSS -->
 
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -61,11 +67,18 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
-            <div class="clearfix hidden-lg-up">
-                <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
+            <div class="hide-lg-up float-right">
+                <button class="navbar-toggler btn btn-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
+            
+            <div class="hide-xs-down float-right mt-0_25 mr-1 mr-lg-0">
+                <form class="form-inline docsearch-wrapper">
+                    <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" />
+                </form>
+            </div>
+            
             <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
@@ -81,7 +94,7 @@
                         <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/utilities/clearfix/" class="nav-link">Utilities</a>
+                        <a href="/utilities/borders/" class="nav-link">Utilities</a>
                     </li>
                     <li class="nav-item ">
                         <a href="/widgets/overview/" class="nav-link">Widgets</a>
@@ -89,9 +102,7 @@
                     <li class="nav-item ">
                         <a href="/about/overview/" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item pull-lg-right">
-                        <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
@@ -101,7 +112,7 @@
     <div class="jumbotron jumbotron-full jumbotron-docs">
         <div class="container">
             
-    <h1>Layout</h1>
+    <div class="h1">Layout</div>
     <p class="lead">
         Options for structuring your pages, including global styles, required scaffolding, grid system, and more.
     </p>
@@ -112,7 +123,7 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-3 cf-sidebar">
+            <div class="col-12 col-md-3 cf-sidebar">
                 <nav class="cf-links">
 
 
@@ -125,60 +136,54 @@
   
 
   
-    
-      <div class="h4">Layout</div>
-      <ul class="nav">
+    <div class="h4">Layout</div>
+    <ul class="nav">
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/overview" class="nav-link ">
-              Overview
-            </a>
-          </li>
         
-          
-          
-
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/grid" class="nav-link ">
-              Grid
-            </a>
-          </li>
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/responsive-utilities" class="nav-link active">
-              Responsive Utilities
-            </a>
-          </li>
+        <li class="nav-item">
+          <a href="/layout/overview/" class="nav-link ">
+            Overview
+          </a>
+        </li>
+      
         
-          
-          
 
-          
-          
-
-          <li class="nav-item">
-            <a href="/layout/flexbox" class="nav-link ">
-              Flexbox
-            </a>
-          </li>
         
-      </ul>
-    
+        
+
+        <li class="nav-item">
+          <a href="/layout/grid/" class="nav-link ">
+            Grid
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/layout/responsive-utilities/" class="nav-link active">
+            Responsive Utilities
+          </a>
+        </li>
+      
+        
+
+        
+        
+
+        <li class="nav-item">
+          <a href="/layout/flexbox/" class="nav-link ">
+            Flexbox
+          </a>
+        </li>
+      
+    </ul>
   
 
   
@@ -194,8 +199,6 @@
   
   
 
-  
-    
   
 
   
@@ -211,7 +214,7 @@
 </nav>
 
             </div>
-            <div class="col-xs-12 col-md-9 cf-content">
+            <div class="col-12 col-md-9 cf-content">
                 <h1 class="cf-title" id="content">
                     Responsive Utilities
                     
@@ -231,10 +234,10 @@
 <h2 id="available-classes">Available classes</h2>
 
 <ul>
-  <li>The <code class="highlighter-rouge">.hidden-*-up</code> classes hide the element when the viewport is at the given breakpoint or wider. For example, <code class="highlighter-rouge">.hidden-md-up</code> hides an element on medium, large, and extra-large viewports.</li>
-  <li>The <code class="highlighter-rouge">.hidden-*-down</code> classes hide the element when the viewport is at the given breakpoint or smaller. For example, <code class="highlighter-rouge">.hidden-md-down</code> hides an element on extra-small, small, and medium viewports.</li>
+  <li>The <code class="highlighter-rouge">.hide-*-up</code> classes hide the element when the viewport is at the given breakpoint or wider. For example, <code class="highlighter-rouge">.hide-md-up</code> hides an element on medium, large, and extra-large viewports.</li>
+  <li>The <code class="highlighter-rouge">.hide-*-down</code> classes hide the element when the viewport is at the given breakpoint or smaller. For example, <code class="highlighter-rouge">.hide-md-down</code> hides an element on extra-small, small, and medium viewports.</li>
   <li>There are no explicit “visible”/”show” responsive utility classes; you make an element visible by simply not hiding it at that breakpoint size.</li>
-  <li>You can combine one <code class="highlighter-rouge">.hidden-*-up</code> class with one <code class="highlighter-rouge">.hidden-*-down</code> class to show an element only on a given interval of screen sizes. For example, <code class="highlighter-rouge">.hidden-sm-down.hidden-xl-up</code> shows the element only on medium and large viewports. Using multiple <code class="highlighter-rouge">.hidden-*-up</code> classes or multiple <code class="highlighter-rouge">.hidden-*-down</code> classes is redundant and pointless.</li>
+  <li>You can combine one <code class="highlighter-rouge">.hide-*-up</code> class with one <code class="highlighter-rouge">.hide-*-down</code> class to show an element only on a given interval of screen sizes. For example, <code class="highlighter-rouge">.hide-sm-down.hide-xl-up</code> shows the element only on medium and large viewports. Using multiple <code class="highlighter-rouge">.hide-*-up</code> classes or multiple <code class="highlighter-rouge">.hide-*-down</code> classes is redundant and pointless.</li>
   <li>These classes don’t attempt to accommodate less common cases where an element’s visibility can’t be expressed as a single contiguous range of viewport breakpoint sizes; you will instead need to use custom CSS in such cases.</li>
 </ul>
 
@@ -267,7 +270,7 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row"><code>.hidden-xs-down</code></th>
+        <th scope="row"><code>.hide-xs-down</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-visible">Visible</td>
         <td class="is-visible">Visible</td>
@@ -275,7 +278,7 @@
         <td class="is-visible">Visible</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-sm-down</code></th>
+        <th scope="row"><code>.hide-sm-down</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
         <td class="is-visible">Visible</td>
@@ -283,7 +286,7 @@
         <td class="is-visible">Visible</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-md-down</code></th>
+        <th scope="row"><code>.hide-md-down</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
@@ -291,7 +294,7 @@
         <td class="is-visible">Visible</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-lg-down</code></th>
+        <th scope="row"><code>.hide-lg-down</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
@@ -299,7 +302,7 @@
         <td class="is-visible">Visible</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-xl-down</code></th>
+        <th scope="row"><code>.hide-xl-down</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
@@ -307,7 +310,7 @@
         <td class="is-hidden">Hidden</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-xs-up</code></th>
+        <th scope="row"><code>.hide-xs-up</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
@@ -315,7 +318,7 @@
         <td class="is-hidden">Hidden</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-sm-up</code></th>
+        <th scope="row"><code>.hide-sm-up</code></th>
         <td class="is-visible">Visible</td>
         <td class="is-hidden">Hidden</td>
         <td class="is-hidden">Hidden</td>
@@ -323,7 +326,7 @@
         <td class="is-hidden">Hidden</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-md-up</code></th>
+        <th scope="row"><code>.hide-md-up</code></th>
         <td class="is-visible">Visible</td>
         <td class="is-visible">Visible</td>
         <td class="is-hidden">Hidden</td>
@@ -331,7 +334,7 @@
         <td class="is-hidden">Hidden</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-lg-up</code></th>
+        <th scope="row"><code>.hide-lg-up</code></th>
         <td class="is-visible">Visible</td>
         <td class="is-visible">Visible</td>
         <td class="is-visible">Visible</td>
@@ -339,7 +342,7 @@
         <td class="is-hidden">Hidden</td>
       </tr>
       <tr>
-        <th scope="row"><code>.hidden-xl-up</code></th>
+        <th scope="row"><code>.hide-xl-up</code></th>
         <td class="is-visible">Visible</td>
         <td class="is-visible">Visible</td>
         <td class="is-visible">Visible</td>
@@ -363,22 +366,22 @@
     </thead>
     <tbody>
       <tr>
-        <th><code>.visible-print-block</code></th>
+        <th><code>.print-show-block</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-visible">Visible<br />(as <code>display: block</code>)</td>
       </tr>
       <tr>
-        <th><code>.visible-print-inline</code></th>
+        <th><code>.print-show-inline</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-visible">Visible<br />(as <code>display: inline</code>)</td>
       </tr>
       <tr>
-        <th><code>.visible-print-inline-block</code></th>
+        <th><code>.print-show-inline-block</code></th>
         <td class="is-hidden">Hidden</td>
         <td class="is-visible">Visible<br />(as <code>display: inline-block</code>)</td>
       </tr>
       <tr>
-        <th><code>.hidden-print</code></th>
+        <th><code>.print-hide</code></th>
         <td class="is-visible">Visible</td>
         <td class="is-hidden">Hidden</td>
       </tr>
@@ -393,67 +396,67 @@
 <p>Green checkmarks indicate the element <strong>is visible</strong> in your current viewport.</p>
 
 <div class="row responsive-utilities-test visible-on">
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-sm-up visible">&#10004; Visible on extra small</span>
-    <span class="hidden-xs-down not-visible">Extra small</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-sm-up visible">&#10004; Visible on extra small</span>
+    <span class="hide-xs-down not-visible">Extra small</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-md-up visible">&#10004; Visible on small or narrower</span>
-    <span class="hidden-sm-down not-visible">Small or narrower</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-md-up visible">&#10004; Visible on small or narrower</span>
+    <span class="hide-sm-down not-visible">Small or narrower</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-lg-up visible">&#10004; Visible on medium or narrower</span>
-    <span class="hidden-md-down not-visible">Medium or narrower</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-lg-up visible">&#10004; Visible on medium or narrower</span>
+    <span class="hide-md-down not-visible">Medium or narrower</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-xl-up visible">&#10004; Visible on large or narrower</span>
-    <span class="hidden-lg-down not-visible">Large or narrower</span>
-  </div>
-</div>
-
-<hr />
-
-<div class="row responsive-utilities-test visible-on">
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-xs-down visible">&#10004; Visible on small or wider</span>
-    <span class="hidden-sm-up not-visible">Small or wider</span>
-  </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-sm-down visible">&#10004; Visible on medium or wider</span>
-    <span class="hidden-md-up not-visible">Medium or wider</span>
-  </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-md-down visible">&#10004; Visible on large or wider</span>
-    <span class="hidden-lg-up not-visible">Large or wider</span>
-  </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-lg-down visible">&#10004; Visible on extra large</span>
-    <span class="hidden-xl-up not-visible">Extra large</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-xl-up visible">&#10004; Visible on large or narrower</span>
+    <span class="hide-lg-down not-visible">Large or narrower</span>
   </div>
 </div>
 
 <hr />
 
 <div class="row responsive-utilities-test visible-on">
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-sm-up visible">&#10004; Your viewport is exactly extra small</span>
-    <span class="hidden-xs-down not-visible">Your viewport is NOT exactly extra small</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-xs-down visible">&#10004; Visible on small or wider</span>
+    <span class="hide-sm-up not-visible">Small or wider</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-xs-down hidden-md-up visible">&#10004; Your viewport is exactly small</span>
-    <span class="hidden-sm-only not-visible">Your viewport is NOT exactly small</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-sm-down visible">&#10004; Visible on medium or wider</span>
+    <span class="hide-md-up not-visible">Medium or wider</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-sm-down hidden-lg-up visible">&#10004; Your viewport is exactly medium</span>
-    <span class="hidden-md-only not-visible">Your viewport is NOT exactly medium</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-md-down visible">&#10004; Visible on large or wider</span>
+    <span class="hide-lg-up not-visible">Large or wider</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-md-down hidden-xl-up visible">&#10004; Your viewport is exactly large</span>
-    <span class="hidden-lg-only not-visible">Your viewport is NOT exactly large</span>
+  <div class="col-6 col-sm-3">
+    <span class="hide-lg-down visible">&#10004; Visible on extra large</span>
+    <span class="hide-xl-up not-visible">Extra large</span>
   </div>
-  <div class="col-xs-6 col-sm-3">
-    <span class="hidden-lg-down visible">&#10004; Your viewport is exactly extra large</span>
-    <span class="hidden-xl-only not-visible">Your viewport is NOT exactly extra large</span>
+</div>
+
+<hr />
+
+<div class="row responsive-utilities-test visible-on">
+  <div class="col-6 col-sm-3">
+    <span class="hide-sm-up visible">&#10004; Your viewport is exactly extra small</span>
+    <span class="hide-xs-down not-visible">Your viewport is NOT exactly extra small</span>
+  </div>
+  <div class="col-6 col-sm-3">
+    <span class="hide-xs-down hide-md-up visible">&#10004; Your viewport is exactly small</span>
+    <span class="hide-sm-only not-visible">Your viewport is NOT exactly small</span>
+  </div>
+  <div class="col-6 col-sm-3">
+    <span class="hide-sm-down hide-lg-up visible">&#10004; Your viewport is exactly medium</span>
+    <span class="hide-md-only not-visible">Your viewport is NOT exactly medium</span>
+  </div>
+  <div class="col-6 col-sm-3">
+    <span class="hide-md-down hide-xl-up visible">&#10004; Your viewport is exactly large</span>
+    <span class="hide-lg-only not-visible">Your viewport is NOT exactly large</span>
+  </div>
+  <div class="col-6 col-sm-3">
+    <span class="hide-lg-down visible">&#10004; Your viewport is exactly extra large</span>
+    <span class="hide-xl-only not-visible">Your viewport is NOT exactly extra large</span>
   </div>
 </div>
 
@@ -467,7 +470,7 @@
 
     <footer class="cf-footer">
     <div class="container">
-        Currently version: 1.3.1
+        Current version: 2.0.0
         <ul class="footer-links">
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
@@ -497,6 +500,17 @@
 
     </div>
 </footer>
+
+
+<script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+<script>
+docsearch({
+    apiKey: '3b9b6e000775400f4833a14c4daa6049',
+    indexName: 'figuration',
+    inputSelector: '#docsearch'
+});
+</script>
+
 
 </body>
 </html>
