Add padding to col-*-auto

--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -135,6 +135,12 @@
                 @extend %col-gutter;
             }
         }
+
+        @if $enable-flex-full or $enable-flex-opt {
+            .col#{$bprule}-auto {
+                @extend %col-gutter;
+            }
+        }
     }
 
     @include make-grid-columns();
