Fix spelling of responsive
Fix incorrect img-fluid references

Also change `.img-rounded` to `.radius` in image and figure examples

--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -112,7 +112,7 @@
         }
     }
 
-    // Create repsonsive grid gutters
+    // Create responsive grid gutters
     @each $breakpoint in map-keys($grid-breakpoints) {
         $bprule: breakpoint-designator($breakpoint);
 
