--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -228,7 +228,7 @@ img {
     // centers them. This won't apply should you reset them to `block` level.
     vertical-align: middle;
     // Note: `<img>`s are deliberately not made responsive by default.
-    // For the rationale behind this, see the comments on the `.img-fluid` class.
+    // For the rationale behind this, see the comments on the `.img-responsive` class.
 }
 
 
