Move custom so base settings and mixins can be used

--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -9,9 +9,11 @@
 @import "functions";
 
 // Variables and mixins
-@import "custom";
 @import "settings";
 @import "mixins";
+
+// Custom overrides
+@import "custom";
 
 // Base reset
 @import "base/normalize";
