remove button pointer and use new focus ring

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,7 +10,7 @@
 @import "mixins/hover";
 @import "mixins/images";
 @import "mixins/embeds";
-@import "mixins/keyboard-focus";
+@import "mixins/focus-ring";
 @import "mixins/reset-filter";
 @import "mixins/screen-reader";
 @import "mixins/reset-text";
