--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -169,7 +169,11 @@ a {
     }
 
     &:focus {
-        @include focus-ring();
+        @if $enable-focus-ring {
+            @include focus-ring();
+        } @else {
+            @include focus-outline();
+        }
     }
 }
 
