--- a/scss/mixins/_focus-ring.scss
+++ b/scss/mixins/_focus-ring.scss
@@ -1,5 +1,11 @@
 // WebKit-style visual focus ring indicating focus state
 @mixin focus-ring() {
+    outline: 0;
+    box-shadow: $focus-ring-shadow;
+}
+
+// Use browser defaults
+@mixin focus-outline() {
     outline: $focus-outline;
-    box-shadow: $focus-shadow;
+    outline-offset: -2px;
 }
