--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -15,6 +15,14 @@
         cursor: move;
         opacity: .75;
     }
+
+    &:focus {
+        @if $enable-focus-ring {
+            @include focus-ring();
+        } @else {
+            @include focus-outline();
+        }
+    }
 }
 
 // Additional properties for button version
